[tool.poetry]
name = "7eleven-python"
version = "0.1.0"
description = ""
authors = ["Alec McGavin", "freyta"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
waitress = "^1.4.3"
requests = "^2.23.0"
pycryptodomex = "^3.9.7"
flask-wtf = "^0.14.3"
flask-static-digest = "^0.1.3"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
